infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  # replicas = number of pods we want to create for some particular image
  replicas: 1
  # selector tells the Deployment which pods to manage and find all pods with label app: posts
  selector:
    matchLabels:
      app: client
  # template is where we specify the exact configuration of a pod the deployment will create
  template:
    metadata:
      labels:
        # tells the pod to have a label of app: client
        app: client
    # describes the specification or config options for the pod we're making
    spec:
      containers:
        - name: client
          image: proclus01/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector: # Tell the service to look for the client
    app: client
  type: ClusterIP # K8s will default to a ClusterIP service if we don't specify it
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
