infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  # replicas = number of pods we want to create for some particular image
  replicas: 1
  # selector tells the Deployment which pods to manage and find all pods with label app: posts
  selector:
    matchLabels:
      app: comments
  # template is where we specify the exact configuration of a pod the deployment will create
  template:
    metadata:
      labels:
        # tells the pod to have a label of app: comments
        app: comments
    # describes the specification or config options for the pod we're making
    spec:
      containers:
        - name: comments
          image: proclus01/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector: # Tell the service to look for the comments
    app: comments
  type: ClusterIP # K8s will default to a ClusterIP service if we don't specify it
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
