infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  # replicas = number of pods we want to create for some particular image
  replicas: 1
  # selector tells the Deployment which pods to manage and find all pods with label app: posts
  selector:
    matchLabels:
      app: event-bus
  # template is where we specify the exact configuration of a pod the deployment will create
  template:
    metadata:
      labels:
        # tells the pod to have a label of app: event-bus
        app: event-bus
    # describes the specification or config options for the pod we're making
    spec:
      containers:
        - name: event-bus
          image: proclus01/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector: # Tell the service to look for the event-bus
    app: event-bus
  type: ClusterIP # K8s will default to a ClusterIP service if we don't specify it
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
