infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  # replicas = number of pods we want to create for some particular image
  replicas: 1
  # selector tells the Deployment which pods to manage and find all pods with label app: posts
  selector:
    matchLabels:
      app: query
  # template is where we specify the exact configuration of a pod the deployment will create
  template:
    metadata:
      labels:
        # tells the pod to have a label of app: query
        app: query
    # describes the specification or config options for the pod we're making
    spec:
      containers:
        - name: query
          image: proclus01/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector: # Tell the service to look for the query
    app: query
  type: ClusterIP # K8s will default to a ClusterIP service if we don't specify it
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
